# AutowareArchitectureProposal.iv

common/util/rviz_plugins/autoware_perception_rviz_plugin/: CMakeLists.txt
control/velocity_controller/src/: velocity_controller_core.cpp
localization/pose_estimator/ndt_scan_matcher/ndt_scan_matcher/src/: ndt_scan_matcher_core.cpp
localization/pose_twist_fusion_filter/ekf_localizer/src/: ekf_localizer.cpp
perception/object_recognition/prediction/map_based_prediction/: CMakeLists.txt  package.xml
perception/object_recognition/prediction/map_based_prediction/launch/: map_based_prediction.launch.xml
perception/object_recognition/prediction/map_based_prediction/src/: map_based_prediction_ros.cpp
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/launch/: behavior_velocity_planner.launch.xml
planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/src/: node.cpp
planning/scenario_planning/lane_driving/behavior_planning/lane_change_planner/src/: lane_changer.cpp
planning/scenario_planning/lane_driving/behavior_planning/turn_signal_decider/src/: data_manager.cpp
planning/scenario_planning/lane_driving/motion_planning/obstacle_avoidance_planner/src/: node.cpp
simulator/simple_planning_simulator/src/: simple_planning_simulator_core.cpp
system/autoware_error_monitor/launch/: autoware_error_monitor.launch.xml
system/autoware_error_monitor/src/: autoware_error_monitor_core.cpp
system/autoware_state_monitor/launch/: autoware_state_monitor.launch.xml
system/system_monitor/: package.xml
(+5 files in other folders)
